--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,2 @@
-<app-saludo></app-saludo>
+<button class="btn btn-secondary text-center" (click)="toggleSaludo()">Ocultar Saludo</button>
+<app-saludo [mostrarSaludo]="mostrarSaludo"></app-saludo>
