--- a/src/app/components/saludo/saludo.component.html
+++ b/src/app/components/saludo/saludo.component.html
@@ -1,7 +1,10 @@
-<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
-    <p *ngIf="mostrarSaludo" [ngClass]="{'texto': rojo , 'texto1': verde}">¡Hola, {{nombre | mayusculas}}!</p>
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100" [ngClass]="">
+    <p *ngIf="mostrarSaludo" [ngClass]="{'texto': rojo , 'texto1': verde}">¡Hola, {{nombre | mayusculas}}! </p>
     <div class="mt-3 text-center">
         <button type="button" class="btn btn-primary mx-2" id="rojo" (click)="esRojo()">Rojo</button>
         <button type="button" class="btn btn-primary mx-2" id="verde" (click)="esVerde()">Verde</button>
+    </div>
+    <div class="class mt-3">
+        <button class="btn btn-primary mx-2" (click)="irADespedida()">Despedirse</button>
     </div>
 </div>
